# selfaudit

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  action.yml  audit_log.json  conftest.py  dataset_audit_log.json  live_audit_log.json  llm_audit_log.json  pyproject.toml  report.html  sensor_audit_log.json
.anvil/: config.json
.github/workflows/: ci.yml  data-trust.yml
examples/: sample-audit.html  sample.csv
selfaudit/: __init__.py  __main__.py  audit.py  auditor.py  datasetdemo.py  datasets.py  datasetscanner.py  diagnostician.py  fitting.py  livedemo.py  llm.py  llmauditor.py  llmdemo.py  noisedemo.py  scan.py  sensordemo.py  serve.py  signals.py  solver.py  sources.py
tests/: test_datasets.py  test_fitting.py  test_llm.py  test_scan.py  test_serve.py  test_solver.py  test_sources.py
