[project]
name = "selfaudit"
version = "0.1.0"
description = "Self-Auditing AI: a self-correcting numerical solver with a full audit trail"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["scipy>=1.10"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["selfaudit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["selfaudit"]

[tool.coverage.report]
show_missing = true
fail_under = 95
